crates/solidity-v2/testing/snapshots/cst_output/generated/from_v1/SourceUnit/DecimalNumberExpression/decimal_trailing_ident_start/generated/0.8.30-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Error: Unexpected Identifier. One of Ampersand, AmpersandAmpersand, AmpersandEqual, Asterisk, AsteriskAsterisk, AsteriskEqual, BangEqual, Bar, BarBar, BarEqual, Caret, CaretEqual, CloseParen, Comma, DaysKeyword_Reserved, Equal, EqualEqual, EtherKeyword_Reserved, GreaterThan, GreaterThanEqual, GreaterThanGreaterThan, GreaterThanGreaterThanEqual, GreaterThanGreaterThanGreaterThan, GreaterThanGreaterThanGreaterThanEqual, GweiKeyword_Reserved, HoursKeyword_Reserved, LessThan, LessThanEqual, LessThanLessThan, LessThanLessThanEqual, Minus, MinusEqual, MinusMinus, MinutesKeyword_Reserved, OpenBrace, OpenBracket, OpenParen, Percent, PercentEqual, Period, Plus, PlusEqual, PlusPlus, QuestionMark, SecondsKeyword_Reserved, Slash, SlashEqual, WeeksKeyword_Reserved, WeiKeyword_Reserved was expected
   ╭─[crates/solidity-v2/testing/snapshots/cst_output/generated/from_v1/SourceUnit/DecimalNumberExpression/decimal_trailing_ident_start/input.sol:6:11]
   │
 6 │         (1a);
   │           ┬  
   │           ╰── Error occurred here.
───╯
